Fixed nav bar on small screens. Fixed table overhang.

--- a/css/screen_index.css
+++ b/css/screen_index.css
@@ -143,14 +143,14 @@ article h2 {
 
 table, th, td {
     border: 1px solid black;
-    padding: 0.5em;
+    padding: 0.2em;
 }
 
 table {
     margin-bottom: 1em;
     margin-left: auto;
     margin-right: auto;
-    max-width: 90%;
+    max-width: 95%;
 }
 
 article {
@@ -289,6 +289,12 @@ footer {
     margin-right: 40px;
     margin-top: -40px;
 }
+
+article {
+    margin-top: 5em;
+}
+
+
 }
 
 /*Image Slider */
